--- a/wg0.conf
+++ b/wg0.conf
@@ -1,8 +1,10 @@
 [Interface]
-Address = 192.168.20.1/24
+Address = fdaa::10/127
 ListenPort = 5556
 PrivateKey = WIREGUARD_PRIVATE_KEY
+PostUp = ip6tables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+PostDown = ip6tables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 
 [Peer]
 PublicKey = E/qYdEHwOvWmB4T40Ey+7dN/LAH/nCbCu0TL7VRp1i4=
-AllowedIPs = 192.168.20.2/32
+AllowedIPs = fdaa::20/127
